istio/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: dest-nginx-service
spec:
 host: bill-service
 subsets:
 - name: v1
   labels:
    version: v1
 - name: v2
   labels:
    version: v2
