istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: vs-bill-service
 namespace: default
spec:
 hosts:
 - bill-service 
 http:
 - name: bill-service-route
   route:
   - destination:
      host: bill-service
      subset: v1
     weight: 10
   - destination:
      host: bill-service
      subset: v2
     weight: 90
